Fix overlapping layout and responsive issues

--- a/sec6.css
+++ b/sec6.css
@@ -1,93 +1,142 @@
-.sec-7{
-    display: flex;
+.sec-6{
+    display:flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
-    gap: 80px;
-    height:90vh;
-    margin-top:50px;
-    margin-bottom:50px;
-}
-.sec-7-1{
-    display:flex;
-    font-weight:300px;
-    font-size:35px;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 50px;
-    margin-top:50px;
-}
-.sec-7-1 h1{
-    font-size: 150px;
-    font-weight: 600;
-    margin-top:100px;
-    margin-bottom:100px;
-   
-}
-.sec-7-1 > :nth-child(1){
-    font-weight:600;
-    margin-top:50px;
-    margin-bottom:50px;
-}
-.a1,.a2{
-    display:flex;
-    align-items: center;
-    gap:10px;
-}
-.a1 img{
-    width:35px;
-}
-.a2 img{
-    width:30px;
-}
-.sec-7-2{
-    display:flex;
-    gap:30px;
-    border:2px solid black;
-    padding:0px;
-    border-radius: 30px;
+    height: 90vh;
+    gap:50px;
     margin-top:0px;
-    margin-bottom:0px;
+    margin-bottom:10px;
 }
-.a1 span,.a2 span{
-    font-weight:600;
+.span{
+  margin-top:10px;
+  margin-bottom:10px;
+}
+.sec-6 h1{
+        font-size: 30px;
+        margin-bottom: 20px;
+}
+.sec-6-1>:nth-child(1){
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 0;
+    font-family: Arial, sans-serif;
+}
+.sec-6-1{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top:200px;
+    font-family: Arial, sans-serif;
 
 }
-.social-icons a {
-  margin: 20px;
-  color: #333;
-  font-size:90px;
-  text-decoration: none;
-  margin-top:0px;
-  margin-bottom:0px;
+.sec-6-2{
+    display: flex;
+    gap: 50px;
 }
-.contact-icons{
-    gap: 20px;
-    font-size: 200px;
+.box3{
+    padding-top:40px;
+    width:450px;
+    border:2px solid black;
+    height:500px;
+    display:flex;
+    flex-direction:column;
     align-items: center;
-    margin-top:0px;
-    margin-bottom:0px;
+    border-radius:15px;
+    padding: 20px;
+    font-size: 20px;
+    gap:15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-bottom: 400px;
+}
+.box3 img{
+    width:300px;
+    height:300px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+.box3-2{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+.box3-2 > :nth-child(1){
+    font-size:22px;
+    font-weight: 600;
+}
+@media(max-width:1024px){
+  .sec-6-2{
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding-bottom: 100px; 
+    height:100%;
+  }
+  .box3 {
+    width: 500px;
+    gap:20px; 
+  }
+  .box3-2 > :nth-child(1){
+    font-size:30px;
+    font-weight: 600;
+}
+}
+@media screen and (max-width: 767px) {
+  .sec-6-2 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .box3 {
+    width: 300px;
+    gap: 15px;
+  }
+  .box3-2 > :nth-child(1) {
+    font-size: 20px;
+    font-weight: 600;
+  }
 }
 @media (max-width: 873px) {
-    span{
-        font-size: 20px;
-        font-weight: 600;
-        margin-top:250px;
-        margin-bottom:50px;
-    }
-    h1{
-        font-size: 50px;
-        font-weight: 600;
-        margin-top:280px;
-        margin-bottom:50px;
-    }
-    .sec-7-1{
-        margin-top: 10px;
-        margin-bottom: 10px;
-
-    }
-    .social-icons a {
-    top:60px;
-    margin-bottom: 50px;
+  .box3{
+    margin-top:0px;
+    padding-top:20px;
+    width:150px;
+    border:2px solid black;
+    height:400px;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    border-radius:15px;
+    padding: 20px;
+    font-size: 10px;
+    gap:10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-bottom: 100px;
 }
+.box3 img{
+    width:150px;
+    height:150px;
+    border-radius: 09px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+.box3-2{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.box3-2 > :nth-child(1){
+    font-size:10px;
+    font-weight: 200;
+}
+
+span{
+    font-size: 10px;
+    top:0px;
+  }
+  h1{
+    margin-top:20px;
+    margin-bottom:10px;
+  }
 }
